# asianOptionPricing

./: .mpd.conf  Makefile.am  README  aclocal.m4  configure  configure.ac  option_pricing.pbs
doc/: Makefile.am  report.tex
doc/auto/: report.el
doc/images/pseudo/: delta_share.eps  gamma_share.eps  hist_Savg.eps  option_share.eps  priceOptionSigma100.eps  priceOptionSigma600.eps  share_evo.eps
doc/images/sobol/: delta_share.eps  gamma_share.eps  hist_Savg.eps  option_share.eps  priceOptionSigma75.eps  share_evo.eps
src/R/: asian_pricing.R.in
src/package/asianOptionPricing/: DESCRIPTION.in
src/package/asianOptionPricing/R/: asian.R  csv.R  european.R  extra.R  greeks.R  io.R  math_util.R  plot.R  random.R  utils.R  volatility.R
src/package/asianOptionPricing/man/: Ind.Rd  asianOptionPricing-package.Rd  calc.option.prices.Rd  call.option.discount.Rd  call.payoff.Rd  central.diff.Rd  csv.write.data.Rd  equal.space.Rd  european.d1.Rd  european.greeks.delta.Rd  european.greeks.gamma.Rd  eval.dir.Rd  first.derivative.Rd  forward.diff.Rd  merge.result.Rd  plot.Rd  price.dev.Rd  price.option.S.Rd  price.option.sigma.Rd  share.price.mc.Rd  volatility.bracket.Rd
